Fix scrollbar appearence on bottom of screen when removing products from cart

--- a/cart/style.css
+++ b/cart/style.css
@@ -123,6 +123,10 @@ input[type="number"] {
     -moz-appearance: textfield;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 @keyframes productRemove {
     0% {
         transform: translateX(0);
